# azureml-workspace

./: README.md  pyproject.toml
sync-notebooks/: README.md  sync_notebooks.py
sync_notebooks/: README.md  sync_notebooks.py
